[gd_scene load_steps=4 format=2]

[ext_resource path="res://Images/card_back.png" type="Texture" id=1]
[ext_resource path="res://Fonts/ubuntu-regular.tres" type="DynamicFont" id=2]
[ext_resource path="res://Player.gd" type="Script" id=3]

[node name="Player" type="Sprite"]
script = ExtResource( 3 )

[node name="CardPlaceholder1" type="Sprite" parent="."]
modulate = Color( 0.117647, 0.52549, 1, 1 )
texture = ExtResource( 1 )

[node name="CardPlaceholder2" type="Sprite" parent="."]
modulate = Color( 0.117647, 0.52549, 1, 1 )
position = Vector2( 152, 0 )
texture = ExtResource( 1 )

[node name="CardPlaceholder3" type="Sprite" parent="."]
modulate = Color( 0.117647, 0.52549, 1, 1 )
position = Vector2( 304, 0 )
texture = ExtResource( 1 )

[node name="PointsLabel" type="Label" parent="."]
margin_left = 416.0
margin_top = -24.0
margin_right = 558.0
margin_bottom = 13.0
custom_fonts/font = ExtResource( 2 )
text = "Points: 61"
__meta__ = {
"_edit_use_anchors_": false
}
